hphp/test/zend/good/Zend/tests/errmsg_034.php.expectf

Fatal error: Clone method test::__clone() cannot be static in %s/errmsg_034.php on line 5
